<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caramain"
                android:textColor="@color/fontWhite"
                android:fontFamily="@font/poppinbold"
                android:layout_gravity="center"
                android:textSize="26sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/fontWhite"
                android:fontFamily="@font/poppinsmedium"
                android:textAlignment="center"
                android:layout_margin="12dp"
                android:text="@string/isicaramain"
                android:textSize="22sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppinbold"
                android:text="@string/semogamenang"
                android:textColor="@color/fontWhite"
                android:textSize="26sp" />

            <Button
                android:id="@+id/tutup"
                android:background="@drawable/button_mulai"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/mulai"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/fontWhite"
                android:layout_marginBottom="5dp"/>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>