<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/taman"
                        android:scaleType="fitXY"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:fontFamily="@font/poppinbold"
                        android:text="@string/welcome"
                        android:textColor="@color/fontWhite"
                        android:textSize="24sp"
                        android:layout_centerVertical="true"/>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:id="@+id/btn_apaitu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/menu_icon"
                        android:layout_width="80dp"
                        android:layout_height="85dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/talk" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/menuround" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/menu_icon"
                        android:layout_centerHorizontal="true"
                        android:padding="5dp"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/question"
                        android:textColor="@color/fontBlack"
                        android:lines="2"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:id="@+id/btn_Main"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/logo1"
                        android:layout_width="80dp"
                        android:layout_height="85dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_travel" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/menuround" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/logo1"
                        android:layout_centerHorizontal="true"
                        android:padding="5dp"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="@string/search"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/fontBlack"
                        android:gravity="center"
                        android:lines="2"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:id="@+id/btn_soal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/icono_play"
                        android:layout_width="80dp"
                        android:layout_height="85dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_contract" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/menuround" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/icono_play"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center"
                        android:lines="2"
                        android:padding="5dp"
                        android:text="@string/quiz"
                        android:textColor="@color/fontBlack"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:id="@+id/btn_tentang"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/logo4"
                        android:layout_width="80dp"
                        android:layout_height="85dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/tick" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/menuround" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/logo4"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center"
                        android:lines="2"
                        android:padding="5dp"
                        android:text="@string/information"
                        android:textColor="@color/fontBlack"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>