<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cnt_afd_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".TamanNasionalDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/foto"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="170dp"
            android:layout_marginRight="40dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvnama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppinbold"
                    android:textColor="@color/fontBlack"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_signs" />

                    <TextView
                        android:id="@+id/tvlokasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppinslight"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/card">

            <TextView
                android:id="@+id/ket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/description"
                android:textColor="@color/fontBlack"
                android:textSize="14sp" />

            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:id="@+id/expandable_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:animDuration="200"
                app:maxCollapsedLines="4">

                <TextView
                    android:id="@+id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="8dp"
                    android:fontFamily="@font/poppinslight"
                    android:textColor="@color/fontBlack"
                    android:textSize="14sp" />

                <ImageButton
                    android:id="@+id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:layout_marginRight="8dp"
                    android:background="@color/transparant"/>

            </com.ms.square.android.expandabletextview.ExpandableTextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/florafauna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/flora"
                android:textColor="@color/fontBlack"
                android:textSize="14sp" />
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:tabGravity="fill"
            app:tabMode="fixed" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kosong"
                android:textSize="14sp"
                android:textColor="@color/fontBlack"/>
        </androidx.viewpager.widget.ViewPager>

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/video_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewpager"
            app:layout_constraintStart_toStartOf="parent"
            app:showFullScreenButton="false" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp">

            <Button
                android:id="@+id/btn_afd_maps"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/vc_maps" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>